--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "email_sender_backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --mode production"
   },
@@ -20,5 +21,8 @@
     "typescript": "^5.6.2",
     "webpack": "^5.94.0",
     "webpack-cli": "^5.1.4"
+  },
+  "engines": {
+    "node": "14.x"
   }
 }
